2006-08-13  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
	src/gui/chat.cpp, src/resources/image.h: Added include main.h in order
	to have USE_OPENGL defined correctly, since it is no longer passed as
	a compiler parameter.

2006-08-12  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_9-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz: Fixed some
	inaccessible areas.

2006-08-07  Philipp Sehmisch  <tmw@crushnet.org>
	* data/maps/new_9-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz,
	data/graphics/images/minimap_new_9-1.png,
	data/graphics/images/minimap_new_14-1.png,
	data/graphics/images/minimap_new_15-1.png,
	data/graphics/images/minimap_new_16-1.png: Added minimaps for woodland
	maps.

2006-08-07  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_1-1.tmx.gz, data/maps/new_14-1.tmx.gz,
	data/maps/new_15-1.tmx.gz, data/maps/new_16-1.tmx.gz: Added a new
	woodland map and a connection map between desert and woodland.
	* data/graphics/woodland_ground.png: Added some new rocks.

2006-08-07  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/game.cpp, src/gui/chat.h, src/gui/chat.cpp, src/main.cpp: A
	bunch of cleanups.

2006-08-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* INSTALL: Updated required Guichan to version 0.5.0.

2006-08-05  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/configuration.cpp, src/game.cpp, src/engine.cpp, src/player.cpp,
	src/being.cpp, src/resources/mapreader.cpp,
	src/resources/itemmanager.cpp: Some cleanups, mostly lowering
	indentation.
	* src/being.cpp: Small code cleanup.

2006-08-04  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/gui/char_select.cpp: Fixed character gender in selection dialog.

2006-08-04  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/animatedsprite.cpp: Fix enum being treated as string.