@@ -1,3 +1,8 @@
+2006-08-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/player.cpp: Verify the gender to prevent crashing when something
+	is wrong with the communication.
+
 2006-08-13  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/openglgraphics.cpp, src/gui/browserbox.h, src/gui/gui.cpp,
